// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exercise Preview Component callbacks are called when overlay and actions are clicked 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="openstax-exercise-preview has-actions card"
  data-exercise-id="7@1"
  tabIndex={-1}
>
  <div
    className="card-body"
  >
    <div
      className="controls-overlay"
      onClick={[Function]}
    >
      <div
        className="message"
      >
        <div
          className="action include"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus-circle fa-w-16 c0 ox-icon ox-icon-plus-circle"
            data-action="include"
            data-icon="plus-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <div
            className="label-message"
          >
            ReInclude question
          </div>
        </div>
      </div>
    </div>
    <div
      className="exercise-body"
    >
      <div>
        <div
          className="openstax-question openstax-question-preview"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "How could physics be useful in weather prediction?",
              }
            }
          />
          <div
            className="answers-table"
          >
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="7-option-0"
                  name="7-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="7-option-0"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice a:"
                      className="answer-letter"
                      data-test-id="answer-choice-a"
                      disabled={true}
                      onClick={[Function]}
                    >
                      a
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Physics helps in predicting dynamics and movement of weather phenomena.",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="7-option-1"
                  name="7-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="7-option-1"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice b:"
                      className="answer-letter"
                      data-test-id="answer-choice-b"
                      disabled={true}
                      onClick={[Function]}
                    >
                      b
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Physics helps in predicting how burning fossil fuel releases pollutants.",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
          </div>
          <div
            className="detailed-solution"
          >
            <div
              className="header"
            >
              Detailed solution
            </div>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "four",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="exercise-footer"
    >
      <div>
        <div
          className="exercise-tags"
        >
          <span
            className="exercise-tag"
          >
            lo:stax-phys:1-2-1
          </span>
          <span
            className="exercise-tag"
          >
            blooms:3
          </span>
          <span
            className="exercise-tag"
          >
            dok:3
          </span>
          <span
            className="exercise-tag"
          >
            time:long
          </span>
          <span
            className="exercise-tag"
          >
            ID:7@1
          </span>
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Exercise Preview Component can hide the answers 1`] = `
<div
  className="openstax-exercise-preview answers-hidden card"
  data-exercise-id="3@1"
  tabIndex={-1}
>
  <div
    className="card-body"
  >
    <div
      className="exercise-body"
    >
      <div>
        <div
          className="openstax-question openstax-question-preview"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<b>Meter-area reduction in copper</b> - does it affect the speed of light, etc?",
              }
            }
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "In what sense does Einstein’s theory of relativity illustrate that physics describes fundamental aspects of our universe?",
              }
            }
          />
          <div
            className="detailed-solution"
          >
            <div
              className="header"
            >
              Detailed solution
            </div>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "four",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="exercise-footer"
    >
      <div>
        <div
          className="exercise-tags"
        >
          <span
            className="exercise-tag"
          >
            lo:stax-phys:1-2-1
          </span>
          <span
            className="exercise-tag"
          >
            blooms:3
          </span>
          <span
            className="exercise-tag"
          >
            dok:3
          </span>
          <span
            className="exercise-tag"
          >
            time:long
          </span>
          <span
            className="exercise-tag"
          >
            ID:3@1
          </span>
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Exercise Preview Component can render question formats 1`] = `
<div
  className="openstax-exercise-preview is-displaying-formats card"
  data-exercise-id="4@1"
  tabIndex={-1}
>
  <div
    className="card-body"
  >
    <div
      className="exercise-body"
    >
      <div>
        <div
          className="openstax-question openstax-question-preview"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Can classical physics be used to accurately describe a satellite moving at a speed of? Explain why or why not.",
              }
            }
          />
          <div
            className="answers-table"
          >
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="4-option-0"
                  name="4-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="4-option-0"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice a:"
                      className="answer-letter"
                      data-test-id="answer-choice-a"
                      disabled={true}
                      onClick={[Function]}
                    >
                      a
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Yes, because the satellite is moving at a speed much smaller than the speed of the light and it is not in a strong gravitational field.",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="4-option-1"
                  name="4-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="4-option-1"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice b:"
                      className="answer-letter"
                      data-test-id="answer-choice-b"
                      disabled={true}
                      onClick={[Function]}
                    >
                      b
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "No, because the satellite is moving at a speed much smaller than the speed of the light and is in a strong gravitational field.",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
          </div>
          <div
            className="formats-listing"
          >
            <div
              className="header"
            >
              Formats:
            </div>
            <span>
              free-response
            </span>
            <span>
              multiple-choice
            </span>
          </div>
          <div
            className="detailed-solution"
          >
            <div
              className="header"
            >
              Detailed solution
            </div>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "four",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="exercise-footer"
    >
      <div>
        <div
          className="exercise-tags"
        >
          <span
            className="exercise-tag"
          >
            lo:stax-phys:1-2-1
          </span>
          <span
            className="exercise-tag"
          >
            blooms:3
          </span>
          <span
            className="exercise-tag"
          >
            dok:3
          </span>
          <span
            className="exercise-tag"
          >
            time:long
          </span>
          <span
            className="exercise-tag"
          >
            ID:4@1
          </span>
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Exercise Preview Component hides context if missing 1`] = `
<div
  className="openstax-exercise-preview card"
  data-exercise-id="8@1"
  tabIndex={-1}
>
  <div
    className="card-body"
  >
    <div
      className="exercise-body"
    >
      <div>
        <div
          className="openstax-question openstax-question-preview"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<b>Meter-area reduction in copper</b> - does it affect the speed of light, etc?",
              }
            }
          />
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "In what sense does Einstein’s theory of relativity illustrate that physics describes fundamental aspects of our universe?",
              }
            }
          />
          <div
            className="answers-table"
          >
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="8-option-0"
                  name="8-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="8-option-0"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice a:"
                      className="answer-letter"
                      data-test-id="answer-choice-a"
                      disabled={true}
                      onClick={[Function]}
                    >
                      a
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "It describes how a frame of reference is necessary to describe position or motion.",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="8-option-1"
                  name="8-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="8-option-1"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice b:"
                      className="answer-letter"
                      data-test-id="answer-choice-b"
                      disabled={true}
                      onClick={[Function]}
                    >
                      b
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "It describes how people think of other people’s views from their own frame of reference.",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="8-option-2"
                  name="8-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="8-option-2"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice c:"
                      className="answer-letter"
                      data-test-id="answer-choice-c"
                      disabled={true}
                      onClick={[Function]}
                    >
                      c
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "It describes how different parts of the universe are far apart and do not affect each other",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="8-option-3"
                  name="8-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="8-option-3"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice d:"
                      className="answer-letter"
                      data-test-id="answer-choice-d"
                      disabled={true}
                      onClick={[Function]}
                    >
                      d
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "It describes how speed affects different observers’ measurements of time and space.",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
          </div>
          <div
            className="detailed-solution"
          >
            <div
              className="header"
            >
              Detailed solution
            </div>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "four",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="exercise-footer"
    >
      <div>
        <div
          className="exercise-tags"
        >
          <span
            className="exercise-tag"
          >
            lo:stax-phys:1-2-1
          </span>
          <span
            className="exercise-tag"
          >
            blooms:3
          </span>
          <span
            className="exercise-tag"
          >
            dok:3
          </span>
          <span
            className="exercise-tag"
          >
            time:long
          </span>
          <span
            className="exercise-tag"
          >
            ID:8@1
          </span>
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Exercise Preview Component limits tags 1`] = `
<div
  className="openstax-exercise-preview card"
  data-exercise-id="9@1"
  tabIndex={-1}
>
  <div
    className="card-body"
  >
    <div
      className="exercise-body"
    >
      <div>
        <div
          className="openstax-question openstax-question-preview"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Can classical physics be used to accurately describe a satellite moving at a speed of? Explain why or why not.",
              }
            }
          />
          <div
            className="answers-table"
          >
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="9-option-0"
                  name="9-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="9-option-0"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice a:"
                      className="answer-letter"
                      data-test-id="answer-choice-a"
                      disabled={true}
                      onClick={[Function]}
                    >
                      a
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Yes, because the satellite is moving at a speed much smaller than the speed of the light and is in a strong gravitational field.",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="9-option-1"
                  name="9-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="9-option-1"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice b:"
                      className="answer-letter"
                      data-test-id="answer-choice-b"
                      disabled={true}
                      onClick={[Function]}
                    >
                      b
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Yes, because the satellite is moving at a speed much smaller than the speed of the light and it is not in a strong gravitational field.",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
          </div>
          <div
            className="detailed-solution"
          >
            <div
              className="header"
            >
              Detailed solution
            </div>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "four",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="exercise-footer"
    >
      <div>
        <div
          className="exercise-tags"
        >
          <span
            className="exercise-tag"
          >
            lo:stax-phys:1-2-1
          </span>
          <span
            className="exercise-tag"
          >
            assignment-type:reading
          </span>
          <span
            className="exercise-tag"
          >
            blooms:3
          </span>
          <span
            className="exercise-tag"
          >
            book:stax-phys
          </span>
          <span
            className="exercise-tag"
          >
            context-cnxfeature:one-1
          </span>
          <span
            className="exercise-tag"
          >
            context-cnxmod:
          </span>
          <span
            className="exercise-tag"
          >
            dok:3
          </span>
          <span
            className="exercise-tag"
          >
            filter-type:test-prep
          </span>
          <span
            className="exercise-tag"
          >
            requires-context:true
          </span>
          <span
            className="exercise-tag"
          >
            time:long
          </span>
          <span
            className="exercise-tag"
          >
            ID:9@1
          </span>
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Exercise Preview Component renders and matches snapshot 1`] = `
<div
  className="openstax-exercise-preview card"
  data-exercise-id="1@1"
  tabIndex={-1}
>
  <div
    className="card-body"
  >
    <div
      className="exercise-body"
    >
      <div>
        <div
          className="openstax-question openstax-question-preview"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "What conditions imply that we can use classical physics without considering special relativity or quantum mechanics?",
              }
            }
          />
          <div
            className="answers-table"
          >
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="1-option-0"
                  name="1-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="1-option-0"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice a:"
                      className="answer-letter"
                      data-test-id="answer-choice-a"
                      disabled={true}
                      onClick={[Function]}
                    >
                      a
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="1-option-1"
                  name="1-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="1-option-1"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice b:"
                      className="answer-letter"
                      data-test-id="answer-choice-b"
                      disabled={true}
                      onClick={[Function]}
                    >
                      b
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<ol>
  <li>matter is moving at speeds greater than roughly 1% the speed of light,</li>
  <li>objects are large enough to be seen with the naked eye, and</li>
  <li>there is the involvement of a strong gravitational field</li>
</ol>
",
                        }
                      }
                    />
                  </div>
                </label>
              </section>
            </div>
          </div>
          <div
            className="detailed-solution"
          >
            <div
              className="header"
            >
              Detailed solution
            </div>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "four",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="exercise-footer"
    >
      <div>
        <div
          className="exercise-tags"
        >
          <span
            className="exercise-tag"
          >
            lo:stax-phys:1-2-1
          </span>
          <span
            className="exercise-tag"
          >
            blooms:3
          </span>
          <span
            className="exercise-tag"
          >
            dok:3
          </span>
          <span
            className="exercise-tag"
          >
            time:long
          </span>
          <span
            className="exercise-tag"
          >
            ID:1@1
          </span>
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Exercise Preview Component sets the className when displaying feedback 1`] = `
<div
  className="openstax-exercise-preview is-displaying-feedback card"
  data-exercise-id="2@1"
  tabIndex={-1}
>
  <div
    className="card-body"
  >
    <div
      className="exercise-body"
    >
      <div>
        <div
          className="openstax-question openstax-question-preview"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "How could physics be useful in weather prediction?",
              }
            }
          />
          <div
            className="answers-table"
          >
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="2-option-0"
                  name="2-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="2-option-0"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice a:"
                      className="answer-letter"
                      data-test-id="answer-choice-a"
                      disabled={true}
                      onClick={[Function]}
                    >
                      a
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Physics helps in predicting how burning fossil fuel releases pollutants.",
                        }
                      }
                    />
                    <aside>
                      <div
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "This would be chemistry rather than physics.",
                          }
                        }
                      />
                    </aside>
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="2-option-1"
                  name="2-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="2-option-1"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice b:"
                      className="answer-letter"
                      data-test-id="answer-choice-b"
                      disabled={true}
                      onClick={[Function]}
                    >
                      b
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Physics helps in predicting how the flowing water affects Earth’s surface.",
                        }
                      }
                    />
                    <aside>
                      <div
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "This is true, but its effects are not involved in day-to-day weather prediction.",
                          }
                        }
                      />
                    </aside>
                  </div>
                </label>
              </section>
            </div>
            <div
              className="openstax-answer"
            >
              <section
                className="answers-answer disabled"
                role="region"
              >
                <input
                  checked={false}
                  className="answer-input-box"
                  disabled={true}
                  id="2-option-2"
                  name="2-options"
                  onChange={[Function]}
                  type="radio"
                />
                <label
                  className="answer-label"
                  htmlFor="2-option-2"
                  onKeyPress={[Function]}
                >
                  <span
                    className="answer-letter-wrapper"
                  >
                    <button
                      aria-label="Choice c:"
                      className="answer-letter"
                      data-test-id="answer-choice-c"
                      disabled={true}
                      onClick={[Function]}
                    >
                      c
                    </button>
                  </span>
                  <div
                    className="answer-answer"
                  >
                    <div
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "Physics helps in predicting the motion of tectonic plates.",
                        }
                      }
                    />
                    <aside>
                      <div
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "This is true, but it is not involved in day to day weather prediction.",
                          }
                        }
                      />
                    </aside>
                  </div>
                </label>
              </section>
            </div>
          </div>
          <div
            className="detailed-solution"
          >
            <div
              className="header"
            >
              Detailed solution
            </div>
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "four",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="exercise-footer"
    >
      <div>
        <div
          className="exercise-tags"
        >
          <span
            className="exercise-tag"
          >
            lo:stax-phys:1-2-1
          </span>
          <span
            className="exercise-tag"
          >
            blooms:3
          </span>
          <span
            className="exercise-tag"
          >
            dok:3
          </span>
          <span
            className="exercise-tag"
          >
            time:long
          </span>
          <span
            className="exercise-tag"
          >
            ID:2@1
          </span>
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;
